--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ok",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon customerserver.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
